--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,3 +7,7 @@ main:
     url: /tags/
   - title: "About"
     url: /about/
+  - title: "Publications"
+    url: /publications/
+  - title: "Publications2"
+    url: /publications2/
