--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ title: Marco's Site
 title_separator: "|"
 subtitle: "Version 0.1"
 email:
-#url: "https://mmistakes.github.io"
-#baseurl: ""
-#repository: "marcocostanzo/repo-name"
+url: "https://marcocostanzo.github.io"
+baseurl: "/test-site"
+repository: "marcocostanzo/test-site"
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
