--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ title_separator: "|"
 subtitle: "Version 0.1"
 email:
 url: "https://marcocostanzo.github.io"
-baseurl: "/test-site"
-repository: "marcocostanzo/test-site"
+baseurl: ""
+repository: "marcocostanzo/marcocostanzo.github.io"
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
