--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ author:
       url: "https://orcid.org/0000-0001-8364-6728"
     - label: "Curriculum Vitae"
       icon: "ai ai-cv"
-      url: ""
+      url: "https://github.com/marcocostanzo/assets/raw/master/cv/cv-costanzo-marco.pdf"
 
 footer:
   links:
