--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,9 @@ main:
   #   url: /categories/
   # - title: "Tags"
   #   url: /tags/
+  - title: "Courses"
+    description: "My Courses"
+    url: /courses/
   - title: "Publications"
     description: "The bibliography of my publications"
     url: /publications/
