Update ulr with assets github pages
Solution in: https://webapps.stackexchange.com/a/153508

--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ author:
       url: "https://orcid.org/0000-0001-8364-6728"
     - label: "Curriculum Vitae"
       icon: "ai ai-cv"
-      url: "https://docs.google.com/viewer?url=https://github.com/marcocostanzo/assets/raw/main/cv/CostanzoMarco_cv_academic_EN.pdf"
+      url: "https://marcocostanzo.github.io/assets/cv/CostanzoMarco_cv_academic_EN.pdf"
 
 footer:
   links:
